# ragchat

./: .gitignore  README.md  pyproject.toml  setup.py
_results/: 2023-ragchat.md
src/data/: README.md
src/ragchat/: pdfchat.py
src/tests/: test_app.py  test_embed.py  test_install.py
